test/1.2/errors/T_ENALLOC.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

bank b {
    parameter register_size = 4;
    register r1 @ undefined {
        parameter allocate = false;
        method get -> (uint64 value) {
            /// ERROR ENALLOC
            value = $this;
        }
        method set (uint64 value) {
        }
    }
    register r2 @ undefined {
        parameter allocate = false;
        method set(uint64 value) {
            /// ERROR ENALLOC
            $this = value;
        }
        method get -> (value) {
            value = 0;
        }
    }
    register r3 @ undefined {
        field f[0] {
            parameter allocate = false;
            method get -> (uint32 value) {
                /// ERROR ENALLOC
                value = $this;
            }
            method set (uint32 value) {
            }
        }
    }
    register r4 @ undefined {
        field f[0] {
            parameter allocate = false;
            method set(uint32 value) {
                /// ERROR ENALLOC
                $this = value;
            }
            method get -> (uint32 value) {
                value = 0;
            }
        }
    }
}

